src/css/index.css
body {
  margin: 0;
  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #024595 !important;
  background: radial-gradient(60% 50% at 60% 45%, rgba(64,118,182,.8) 0%, rgba(130,130,130,0) 100%);
background-repeat: no-repeat;
}
html, body {
  height: 100%;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.bonito-logo {
  height: 28px;
}

/* HOME PAGE */
.search-container {
  margin-right: auto;
  margin-left: auto;
  width: 60%;
}
.search-label {
  font-weight: 300;
  font-size: 4rem;
  letter-spacing: -2%;
  color: #FFFFFF;
}
.search-ingredient {
  width: 100%;
}
/*
.MuiInputBase-input {
  font-size: 84pt !important;
  color: #CECECE !important;
  background-color: #FFFFFF !important;
  border-radius: 12px;
  width: 100%;
  border: 0;
  height: 130px !important;
  margin: 0;
  display: block;
  padding: 6px 0 7px;
  min-width: 0;
  background: none;
  box-sizing: content-box;
  animation-name: MuiInputBase-keyframes-auto-fill-cancel;
  -webkit-tap-highlight-color: transparent;
}
*/
.search-location {
  font-style: normal;
  font-weight: normal;
  font-size: 1.125rem;
  line-height: 1.5;
  /* identical to box height */
  text-align: right;
  color: #FFFFFF;
}
.search-description {
  font-style: normal;
  font-weight: bold;
  font-size: 1.25rem;
  line-height: 1.5;
  color: #FFFFFF;
}

